--- a/style/form.css
+++ b/style/form.css
@@ -159,6 +159,30 @@ outline-color: transparent;
     font-size: 5vh;
 }
 
+#formContact{
+    display: grid;
+    grid-template-columns: 30% 60%;
+    column-gap: 10%;
+    row-gap: 5vh;
+    background-color:rgb(18, 109, 245);
+    margin: 6vh 0vw;
+    border-radius: 1%;
+    padding: 5vh 5vw;
+    color: white;
+    font-size: 3vh;
+    font-weight: 600;
+}
+#formContact div textarea{
+    width: 100%;
+    height: 15vh;
+}
+#formContact button{
+    width: 60%;
+    margin: 0 auto;
+    background-color: #011BEB;
+    color: whitesmoke;
+}
+
 .formBoxTask{
     position: fixed;
     left: -100%;
