--- a/view/login.html
+++ b/view/login.html
@@ -11,12 +11,14 @@
 <body>
     <div class="container-fluid">
     <main>
-    <a class="btn btn-dark btn-return-home" href="../">Return home page</a>
     <div class="formBoxLogin">
+        <button type="button" class="btn-return-home">
+            <a class="btn" href="../">Return home page</a>
+        </button>
         <form action="../controller/login.php" method="POST">
             <div class="login-title">
                 <span class="text-login">LOGIN</span>
-                <span class="text-center-welcome">welcome! login information.</span>
+                <span class="text-center-welcome">welcome! login information</span>
             </div>
             <div class="input-container">
                 <input name="username" type="text" required=""/>
