--- a/view/registration.html
+++ b/view/registration.html
@@ -11,8 +11,10 @@
 <body>
     <div class="container-fluid">
     <main>
-    <a class="btn btn-dark btn-return-home" href="../">Return home page</a>
         <div class="formBoxRegister">
+            <button type="button" class="btn-return-home">
+                <a class="btn" href="../">Return home page</a>
+            </button>
             <form action="../controller/registration.php" method="POST">
                 <div class="formFormat register-format">
                     <div class="text-center">
