--- a/style/style.css
+++ b/style/style.css
@@ -52,15 +52,20 @@ header{
     top: 2vh;
     transition: top 1s;
     transition-delay: 0.5s;
+    color: white;
 }
 .other-submenu{
     right: 5vw;
 }
-.other-submenu button a{
+.other-submenu button {
+    background-color: rgba(0, 0, 0, 0.89);
+}
+.other-submenu button a {
     color: white;
 }
 .btn-menu{
     left: 5vw;
+    background-color: rgba(0, 0, 0, 0.89);
 }
 .navegbar{
     position: absolute;
@@ -70,9 +75,6 @@ header{
     transition: top 1s;
     transition-delay: 0.5s;
     z-index: 30;
-}
-.navegbar:focus{
-    top: 0vh;
 }
 .btn-menu:focus {
     background-color: rgb(18, 109, 245);
@@ -98,7 +100,6 @@ ul{
 ul li button{
     position: relative;
     list-style: none;
-    border: 0.5px solid gray;
     outline: none;
     width: 100%;
     height: 8.33vh;
@@ -108,6 +109,8 @@ ul li button{
     margin: 0;
     padding: 0;
     z-index: 50;
+    border: 0.5px solid gray;
+    background-color: rgb(31, 27, 27);
 }
 ul li{
     position: relative;
@@ -151,7 +154,6 @@ ul li{
     width: 90%;
     margin: 3vh auto 0 auto;
     padding: 3vh 5vw 0 5vw;
-    background-color: yellowgreen;
 }
 .contact h1,
 .aboutMe h1{
@@ -160,26 +162,35 @@ ul li{
     margin-bottom: 3vh;
 }
 .aboutMe p{
-    font-size: 3vh;
+    font-size: 2.5vh;
     text-align: justify;
 }
-
+.aboutMe p:nth-child(2){
+    margin-bottom: 2vh;
+}
 .iconTech{
+    width: 90%;
+    margin: 5vh auto;
     display: flex;
     justify-content: center;
-    background-color: yellow;
+    align-items: center;
 }
 .icon{
-    width: 18vw;
-    height: 20vh;
+    width: 16vw;
+    height: 10vh;
     margin: 0vh 0.5vw;
-    display: flex;
-    align-items: center;
-
 }
 .icon img {
     width: 100%;
+    height: 100%;
+}
+.iconTech picture:nth-child(2){
+    width: 12vw;
     height: 10vh;
+}
+.iconTech picture:nth-child(4){
+    width: 20vw;
+    height: 8vh;
 }
 #contactPage{
     display: flex;
@@ -187,13 +198,13 @@ ul li{
     margin: 0 auto;
     width: 80%;
 }
-#contactPage section{
-    margin: 2vh 0vw;
-    width: 100%;
-}
 #contactPage section h2{
     margin: 5vh 0vw;
     font-size: 5vh;
+}
+#contactPage section{
+    margin: 2vh 0vw;
+    width: 100%;
 }
 #contactInf{
     display: grid;
@@ -265,11 +276,10 @@ ul li{
 #tableTask tr .taskTable{
     overflow: auto;
 }
-
 #tableTask,
 #tableTask td,
 #tableTask th{
-    border: 1px solid lightsteelblue;
+    border: 1px solid cornflowerblue;
     height: 50px;
 }
 #tableTask th {
@@ -279,7 +289,7 @@ ul li{
     color: white;
 }
 #tableTask td {
-    padding: 10px;
+    padding: 10px 5px;
     text-align: left;
 }
 #tableTask tr{
@@ -315,6 +325,9 @@ ul li{
 #tableTask tbody .tbodyLarge{
     display: none;
 }
+#tableTask thead .theadLarge h4{
+    font-size: 2.5vh;
+}
 #tableTask tbody .tbodySmall td{
     position: relative;
 }
@@ -334,6 +347,10 @@ ul li{
     transition: all 0s;
     transition-delay: 0.1s;
 }
+.detailsBox p,
+.detailsBox h4{
+    margin: 1vh 5vw;
+}
 .detailsBox .btn-centered{
     display: flex;
     justify-content: center;
@@ -347,28 +364,6 @@ ul li{
     visibility: visible;
     top: 8vh;
 }
-@media only screen and (min-width: 480px){
-    .navegbar li a{
-        color: red;
-        font-size: 3vh;
-    }
-    #tableTask thead .theadLarge,
-    #tableTask tbody .tbodyLarge{
-        display: table-row;
-    }
-    #tableTask thead .theadSmall,
-    #tableTask tbody .tbodySmall{
-        display: none;
-    }
-}
-
-@media only screen and (min-width: 768px){
-    .navegbar li a{
-        color: cornflowerblue;
-        font-size: 3vh;
-    }
-}
-
 @media only screen and (orientation: landscape) {
 
     main{
@@ -406,12 +401,18 @@ ul li{
         padding: 10px;
         background: rgb(178,186,199);
         border-radius: 5px;
-        animation: mymove 2s 1;
+        animation: mymove 3s 1;
+        animation-timing-function: ease-out;
         animation-fill-mode: backwards;
     }
     @keyframes mymove {
-        from {top: 10vh; background-color: white;}
-        to {top: 40vh;}
+        0% {top: 10vh; background-color: white;}
+        20% {top: 40vh; background-color:rgb(178,186,199);}
+        40% {top: 30vh; background-color: lightgrey;}
+        60% {top: 40vh; background-color: rgb(178,186,199);}
+        80% {top: 35vh; background-color: lightgrey;}
+        100% {top: 40vh; background-color: rgb(178,186,199);}
+
       }
     .titleWithoutLogin > *{
         font-size: 5vh;
@@ -439,27 +440,78 @@ ul li{
         font-size: 8vh;
     }
     .aboutMe p{
-        margin: 5vh 5vw;
-        font-size: 2.5vh;
-        text-align: justify;
+        font-size: 4vh;
     }
-
     .iconTech{
-        display: flex;
-        justify-content: center;
+        margin: 10vh auto;
     }
     .icon{
-        width: 18vw;
-        height: 20vh;
-        margin: 0vh 0.5vw;
-        display: flex;
-        align-items: center;
-
+        width: 10vw;
+        height: 16vh;
     }
-    .icon img {
-        width: 100%;
-        height: 10vh;
+    .iconTech .icon:nth-child(2){
+        width: 7.5vw;
+        height: 16vh;
     }
-
+    .iconTech .icon:nth-child(4){
+        width: 14vw;
+        height: 12vh;
+    }
+    #contactPage{
+        width: 90%;
+    }
+    #contactPage section h2{
+        font-size: 6vh;
+    }
 
 }
+@media only screen and (min-width: 480px){
+    #tableTask thead .theadLarge,
+    #tableTask tbody .tbodyLarge{
+        display: table-row;
+    }
+    #tableTask thead .theadSmall,
+    #tableTask tbody .tbodySmall{
+        display: none;
+    }
+    #contactPage section{
+        margin: 2vh 0vw;
+        padding: 5vh 4vw;
+        width: 50%;
+    }
+    #tableTask thead .theadLarge h4{
+        font-size: 3vw;
+    }
+    #tableTask tbody .tbodyLarge td,
+    #tableTask tbody .tbodyLarge td button a{
+        font-size: 2.5vw;
+    }
+    .tasksBox{
+        width: 80%;
+    }
+
+}
+
+@media only screen and (min-width: 768px){
+    .navegbar li a{
+        color: cornflowerblue;
+        font-size: 3vh;
+    }
+    #tableTask thead .theadLarge h4{
+        font-size: 3vh;
+    }
+    #tableTask tbody .tbodyLarge td,
+    #tableTask tbody .tbodyLarge td button a{
+        font-size: 2.5vh;
+    }
+    .tasksBox{
+        width: 70%;
+        margin-right: 2.5%;
+        float: right;
+        background-color: cadetblue;
+    }
+    .btn-add-task-form{
+        display: none;
+    }
+}
+
