avances responsive table

--- a/style/form.css
+++ b/style/form.css
@@ -77,7 +77,6 @@ width: 100%;
     font-size: 3vh;
     top:1vh;
     z-index: 10;
-
 }
 .input-container-register input{
     position: absolute;
@@ -100,7 +99,6 @@ width: 100%;
  border-bottom:1px solid #011BEB;
 }
 .btn-form{
-	color:#fff;
 	background-color:#011BEB;
 	outline: none;
     border: 0;
@@ -113,7 +111,6 @@ width: 100%;
     position:relative;
     width: 50%;
 }
-
 .input-container input:focus ~ label,
 .input-container input:valid ~ label{
 	top:-4vh;
@@ -128,7 +125,6 @@ width: 100%;
     position: relative;
     margin-top: 1vh;
 }
-
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus{
@@ -138,7 +134,6 @@ outline: none;
 outline-style: none;
 outline-color: transparent;
 }
-
 .btn-submit{
     position: relative;
     display: flex;
@@ -162,7 +157,6 @@ outline-color: transparent;
     color: white;
     font-size: 5vh;
 }
-
 #formContact{
     display: grid;
     grid-template-columns: 30% 60%;
@@ -180,6 +174,9 @@ outline-color: transparent;
     width: 100%;
     height: 15vh;
 }
+#formContact label{
+    font-size: 3vh;
+}
 #contactPage .btn-submit button{
     width: 70%;
     font-size: 3vh;
@@ -187,28 +184,29 @@ outline-color: transparent;
 .formBoxTask{
     position: fixed;
     left: -100%;
-    top: 10%;
-    width:90%;
-    height: 65%;
+    top: 12vh;
+    width:80%;
+    height: 68vh;
     color: white;
     background-color: rgb(18, 109, 245);
     font-size: 3vh;
     transition: left 1s;
     z-index: 50;
 }
-
+.formBoxTask form:first-child{
+    height: 100%;
+}
 .btn-add-task-form{
     position: fixed;
     top:2%;
-    left: 5%;
+    left: 10%;
     z-index: 40;
 }
 main .btn-add-task-form:focus ~ .formBoxTask{
-    left: 5%;
+    left: 10%;
 }
 main .btn-add-task-form:focus{
     background-color: rgb(18, 109, 245);
-
 }
 main .formBoxTask:focus-within{
     position: fixed;
@@ -217,8 +215,7 @@ main .formBoxTask:focus-within{
 .input-container-addTask{
     width: 100%;
     height: 20%;
-    padding: 1vh 5%;
-
+    padding: 1vh 10vw;
 }
 .input-container-addTask label{
 font-size: 3vh;
@@ -228,19 +225,18 @@ font-weight: 500;
 .input-container-addTask select,
 .input-container-addTask input{
     width: 100%;
+    height: 5vh;
 }
 .input-container-addTask button{
     width: 50%;
 }
-
 .formBoxEditTask{
     width: 90%;
     background-color: rgb(18, 109, 245);
     padding: 5vh 2vw;
 }
 
-@media only screen and (orientation: landscape) {
-
+@media only screen and (orientation: landscape) and (max-width: 767px) {
     #contactPage .btn-submit button{
         width: 80%;
         font-size:4vh;
@@ -291,42 +287,42 @@ font-weight: 500;
         font-size: 3vh;
     }
     .formBoxTask{
-        width:60%;
-        height: 60vh;
-        font-size: 3vh;
-        padding: 0vh 0vw;
-        border: 2px solid gray;
+        top: 12vh;
+        width:70%;
+
     }
     main .btn-add-task-form:focus ~ .formBoxTask{
-        left: 20%;
+        left: 15%;
     }
     main .formBoxTask:focus-within{
-        left: 20%;
+        left: 15%;
     }
     .formBoxTask div{
         display: grid;
-        grid-template-columns: 45% 45%;
-        column-gap: 10%;
-        grid-template-rows: repeat(3,20vh);
+        grid-template-columns: 46% 46%;
+        grid-template-rows: repeat(2,40%) 20%;
+        column-gap: 8%;
+        height: 100%;
     }
     .formBoxTask div .input-container-addTask{
         height: 100%;
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        padding: 2vh 3vw;
     }
     .input-container-addTask label{
-        font-size: 2vw;
+        font-size: 4vh;
     }
     .input-container-addTask textarea,
     .input-container-addTask select,
     .input-container-addTask input{
-        height: 40%;
+        height: 30%;
     }
     .formBoxTask div:nth-child(5){
         grid-column-start: 1;
         grid-column-end: 3;
     }
-
     .formBoxEditTask{
         width: 40%;
     }
@@ -335,16 +331,32 @@ font-weight: 500;
     .formBoxLogin{
         width: 60%;
     }
-
 }
-
 @media only screen and (min-width: 768px){
-    .formBoxTask{
-        width:25%;
-        left: 2.5%;
-        top: 10vh;
-        height: 60vh;
-        font-size: 3vh;
-        padding: 0vh 0vw;
+    #formContact{
+        width: 90%;
+        padding: 5vh 3vw;
     }
+    #formContact label{
+        font-size: 1.5vw;
+    }
+    .formBoxTask{
+        width:24%;
+        left: 2.5%;
+        top: 12vh;
+        font-size: 3vh;
+    }
+    .formBoxTask div{
+        padding: 1vh 1vw;
+    }
+    .formBoxTask div .input-container-addTask button{
+        width: 80%;
+        font-size: 3vh;
+    }
+}
+@media only screen and (min-width: 1024px){
+    .formBoxTask{
+        top: 20vh;
+    }
+
 }
