--- a/view/login.html
+++ b/view/login.html
@@ -16,24 +16,28 @@
             <a class="btn" href="../">Return home page</a>
         </button>
         <form action="../controller/login.php" method="POST">
-            <div class="login-title">
-                <span class="text-login">LOGIN</span>
-                <span class="text-center-welcome">welcome! login information</span>
+            <div class="form-container-login">
+                <div>
+                    <h2>LOGIN</h2>
+                    <h3>welcome! login information</h3>
+                </div>
+                <div class="input-container">
+                    <input name="username" type="text" required=""/>
+                    <label>Mail/Username</label>		
+                </div>
+                <div class="input-container">		
+                    <input name="password" type="password" required/>
+                    <label>Password</label>
+                </div>
+                <div>
+                    <a class="link" href="./registration.html">
+                        Free registration! 
+                    </a>
+                </div>
+                <div>
+                    <button type="submit" class="btn-form">submit</button>
+                </div>
             </div>
-            <div class="input-container">
-                <input name="username" type="text" required=""/>
-                <label>Mail/Username</label>		
-            </div>
-            <div class="input-container">		
-                <input name="password" type="password" required/>
-                <label>Password</label>
-            </div>
-            <div class="text-right"> 
-                <a class="link" href="./registration.html">
-                    Free registration! 
-                </a>
-            </div>
-            <button type="submit" class="btn-form">submit</button>
         </form>
     </div>
     </main>
