--- a/view/registration.html
+++ b/view/registration.html
@@ -16,7 +16,7 @@
                 <a class="btn" href="../">Return home page</a>
             </button>
             <form action="../controller/registration.php" method="POST">
-                <div class="formFormat register-format">
+                <div class="form-container-register">
                     <div class="text-center">
                         <h2>REGISTER</h2>
                     </div>
